Fixing correlations and methods (See description)
Implementazione di alcuni metodi CRUD nei vari Controller e Service delle classi Ingredient e Recipe.