@@ -2,6 +2,7 @@ package Scs.entities.user;
 
 import java.util.ArrayList;
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 import java.util.UUID;
 
@@ -9,6 +10,7 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
+import com.fasterxml.jackson.annotation.JsonIgnore;
 import com.fasterxml.jackson.annotation.JsonIgnoreProperties;
 
 import Scs.entities.recipe.Recipe;
@@ -28,41 +30,45 @@ import lombok.NoArgsConstructor;
 @Data
 @AllArgsConstructor
 @NoArgsConstructor
-@JsonIgnoreProperties({"password"})
-public class User implements UserDetails{
-	
+@JsonIgnoreProperties({ "password" })
+public class User implements UserDetails {
+
 	@Id
 	@GeneratedValue
 	private UUID id;
-	
+
 	private String name;
 	private String surname;
 	private String username;
 	private String email;
 	private String password;
-	
+
 	@Enumerated(EnumType.STRING)
 	private Role role;
-	
+
 	@OneToMany(mappedBy = "user")
 	private List<Recipe> recipes = new ArrayList<>();
-	
+
 	public User(String _name, String _surname, String _username, String _email, String _password, Role _role) {
-		
+
 		this.name = _name;
 		this.surname = _surname;
 		this.username = _username;
 		this.email = _email;
-		this.password = _password;	
+		this.password = _password;
 		this.role = Role.USER;
-		
+
 	}
 
 	@Override
 	public Collection<? extends GrantedAuthority> getAuthorities() {
-		return List.of(new SimpleGrantedAuthority(role.name()));
+		if (this.role != null) {
+			return List.of(new SimpleGrantedAuthority(role.name()));
+		}
+
+		return Collections.emptyList();
 	}
-	
+
 	@Override
 	public String getUsername() {
 		return this.username;
@@ -87,5 +93,5 @@ public class User implements UserDetails{
 	public boolean isEnabled() {
 		return false;
 	}
-	
+
 }
